--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Brad Bitt - L'aventure</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Le retour Incontesté de Brad Bitt</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
