--- a/index.html
+++ b/index.html
@@ -2,24 +2,96 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Brad Bitt - Aventure</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Brad Bitt Adventure</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://www.youtube.com/iframe_api"></script>
 </head>
 <body>
-  <div class="container">
-    <h1 id="launch-title">Lancement dans :</h1>
-    <div id="countdown"></div>
+  <div id="app">
 
-    <button id="start-btn" class="hidden">Commencer l’aventure</button>
-
-    <div id="password-container">
-      <input type="password" id="checkpoint-password" placeholder="Mot de passe..." />
-      <button onclick="checkPassword()">Valider</button>
-      <p id="password-error"></p>
+    <!-- Timer + Start -->
+    <div id="launch-section">
+      <h1>Lancement dans :</h1>
+      <div id="timer">--:--:--</div>
+      <button id="start-btn" disabled>Commencer l’aventure</button>
     </div>
-  </div>
 
+    <!-- Password Checkpoint -->
+    <div id="password-checkpoint">
+      <input type="text" id="checkpoint-input" placeholder="Mot de passe Checkpoint" />
+      <button id="checkpoint-validate">Valider</button>
+      <div id="checkpoint-status"></div>
+    </div>
+
+    <!-- Animation and main access -->
+    <div id="animation-section" class="hidden">
+      <div id="animated-text"></div>
+      <input type="password" id="access-code" placeholder="Mot de passe secret" />
+      <button id="access-validate">Valider</button>
+      <div id="access-status"></div>
+    </div>
+
+    <!-- Video Section -->
+    <div id="video-section" class="hidden">
+      <h2 id="brad-message">Message de Brad Bitt</h2>
+      <div id="player"></div>
+      <button id="video-next" disabled>Suivant</button>
+    </div>
+
+    <!-- Locations Section -->
+    <div id="locations-section" class="hidden">
+      <h2>Les lieux à suivre :</h2>
+      <ul id="locations-list">
+        <li>Lille</li>
+        <li>??? (Burger King)</li>
+        <li>??? (Laser Games)</li>
+      </ul>
+
+      <div id="code-entry-container">
+        <input type="text" id="location-code" placeholder="Entrer le code" disabled />
+        <button id="location-code-btn" disabled>Mettre le code</button>
+        <div id="location-code-status">Le code ne peut pas encore être entré</div>
+      </div>
+    </div>
+
+    <!-- Tasks Section -->
+    <div id="tasks-section" class="hidden">
+      <h2 id="tasks-location-title"></h2>
+      
+      <div id="roulette-container">
+        <div>
+          <button id="spin-names">Lancer roulette prénoms</button>
+          <div id="roulette-names"></div>
+        </div>
+        <div>
+          <button id="spin-tasks">Lancer roulette gages</button>
+          <div id="roulette-tasks"></div>
+        </div>
+      </div>
+
+      <ul id="tasks-list"></ul>
+
+      <div id="task-complete-section" class="hidden">
+        <p>Tous les gages sont cochés ?</p>
+        <button id="confirm-tasks-yes">Oui</button>
+        <button id="confirm-tasks-no">Non</button>
+      </div>
+    </div>
+
+    <!-- Final Video Section -->
+    <div id="final-video-section" class="hidden">
+      <h2 id="final-brad-message">Message de Brad Bitt</h2>
+      <div id="final-player"></div>
+      <button id="final-video-next" disabled>Suivant</button>
+    </div>
+
+    <!-- End Section -->
+    <div id="end-section" class="hidden">
+      <p><em>Merci d’avoir joué</em></p>
+    </div>
+
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
