--- a/index.html
+++ b/index.html
@@ -1,72 +1,34 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Brad Bitt Adventure</title>
-<link rel="stylesheet" href="style.css" />
-<script src="https://www.youtube.com/iframe_api"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Site en maintenance</title>
+  <style>
+    body {
+      background-color: #222;
+      color: #eee;
+      font-family: Arial, sans-serif;
+      height: 100vh;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      flex-direction: column;
+    }
+    h1 {
+      font-size: 3em;
+      margin-bottom: 0.5em;
+    }
+    p {
+      font-size: 1.5em;
+      color: #aaa;
+    }
+  </style>
 </head>
 <body>
-
-<div id="countdown-container">
-  <h2>Lancement dans :</h2>
-  <div id="countdown"></div>
-</div>
-
-<button id="start-btn" disabled>Commencer l’aventure</button>
-
-<div id="password-container">
-  <input type="text" id="checkpoint-input" placeholder="Mot de passe Checkpoint" />
-  <button id="checkpoint-validate">Valider</button>
-  <div id="checkpoint-msg"></div>
-</div>
-
-<div id="animation-container" class="hidden">
-  <h1 id="animated-text" class="impact"></h1>
-  <input type="text" id="adventure-pass" placeholder="Mot de passe pour la vidéo" />
-  <button id="adventure-validate">Valider</button>
-  <div id="adventure-msg"></div>
-</div>
-
-<div id="video-section" class="hidden">
-  <h3>Message de Brad Bitt</h3>
-  <div id="player"></div>
-  <button id="next-btn" disabled>Suivant (finir la vidéo)</button>
-</div>
-
-<div id="locations-section" class="hidden">
-  <h2>Les lieux à suivre :</h2>
-  <div id="map">
-    <p>Lille</p>
-    <p>...</p>
-    <p>??? (Burger King)</p>
-    <p>...</p>
-    <p>??? (Laser Games)</p>
-  </div>
-
-  <button id="code-btn" disabled>Mettre le code</button>
-  <input type="text" id="location-code" placeholder="Entrer le code" />
-  <div id="code-msg"></div>
-</div>
-
-<div id="tasks-section" class="hidden">
-  <h2>Gages pour <span id="current-location"></span></h2>
-  <div id="roulette-container">
-    <div id="name-roulette">Prénom: <span></span></div>
-    <div id="task-roulette">Gage: <span></span></div>
-    <button id="spin-btn">Lancer la roulette</button>
-  </div>
-
-  <div id="tasks-list"></div>
-
-  <button id="confirm-tasks" disabled>Confirmer tous faits</button>
-</div>
-
-<div id="final-section" class="hidden">
-  <h2>Merci d’avoir joué</h2>
-</div>
-
-<script src="script.js"></script>
+  <h1>Site en maintenance</h1>
+  <p>Nous reviendrons très bientôt. Merci de votre patience !</p>
 </body>
 </html>
