--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
 </head>
 <body>
   <h1>Site en maintenance</h1>
-  <p>Nous reviendrons très bientôt. Merci de votre patience !</p>
+  <p>Nous reviendrons très bientôt. Merci de votre patience ! - Brad Bitt </p>
 </body>
 </html>
