--- a/index.html
+++ b/index.html
@@ -2,33 +2,15 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Site en maintenance</title>
-  <style>
-    body {
-      background-color: #222;
-      color: #eee;
-      font-family: Arial, sans-serif;
-      height: 100vh;
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      flex-direction: column;
-    }
-    h1 {
-      font-size: 3em;
-      margin-bottom: 0.5em;
-    }
-    p {
-      font-size: 1.5em;
-      color: #aaa;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Site en maintenance</h1>
-  <p>Nous reviendrons très bientôt. Merci de votre patience ! - Brad Bitt </p>
+  <div class="maintenance-container">
+    <h1>🚧 Site en maintenance 🚧</h1>
+    <p>Nous revenons très bientôt avec une expérience épique !</p>
+    <p>Merci de votre patience. - Brad Bitt </p>
+  </div>
 </body>
 </html>
