--- a/index.html
+++ b/index.html
@@ -3,14 +3,35 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Site en maintenance</title>
+  <title>Lancement de l'aventure</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="maintenance-container">
-    <h1>🚧 Site en maintenance 🚧</h1>
-    <p>Nous revenons très bientôt avec une expérience épique !</p>
-    <p>Merci de votre patience. - Brad Bitt </p>
+  <div id="main-screen">
+    <h1>Lancement dans :</h1>
+    <div id="countdown"></div>
+    <button id="startBtn" class="hidden">Commencer l’aventure</button>
+    
+    <div id="password-container">
+      <input type="password" id="checkpointInput" placeholder="Mot de passe" />
+      <button id="validateCheckpoint">Valider</button>
+    </div>
   </div>
+
+  <div id="second-screen" class="hidden">
+    <h1 id="brad-title">Le retour incontesté de Brad Bitt</h1>
+    <input type="password" id="bradPassword" placeholder="Mot de passe..." />
+    <button id="validateBrad">Valider</button>
+  </div>
+
+  <div id="third-screen" class="hidden">
+    <h2>Un message de Brad Bitt</h2>
+    <div id="video-container">
+      <iframe id="bradVideo" width="100%" height="215" src="https://www.youtube.com/embed/2DMl0zoaPZ0?enablejsapi=1" frameborder="0" allowfullscreen></iframe>
+    </div>
+    <button id="nextBtn" disabled>Suivant</button>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
