--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <iframe id="bradVideo" width="100%" height="215" src="https://www.youtube.com/embed/2DMl0zoaPZ0?enablejsapi=1" frameborder="0" allowfullscreen></iframe>
     </div>
     <button id="nextBtn" disabled>Suivant</button>
+<p id="infoVideo">Le bouton sera accessible uniquement lorsque la vidéo sera terminée.</p>
   </div>
 
   <script src="script.js"></script>
