--- a/index.html
+++ b/index.html
@@ -35,3 +35,30 @@
   <script src="script.js"></script>
 </body>
 </html>
+<!-- Interface des lieux -->
+<div id="lieux-section" class="hidden">
+    <h2>Les lieux à suivre</h2>
+    <div id="carte-tresor">
+        <p>🔴 Lille</p>
+        <p>⏳ ???</p>
+        <p>⏳ ???</p>
+    </div>
+
+    <div id="gages-lille">
+        <h3>Gages à Lille</h3>
+        <ul id="liste-gages">
+            <li><input type="checkbox"> Aller dans un supermarché et demander un Serrano très très salé</li>
+            <li><input type="checkbox"> Aller dans un magasin de cartes Pokémon et demander s’ils ont des Aquali avec un regard douteux</li>
+            <li><input type="checkbox"> Aller imprimer des photos d’Astérion et dire que vous cherchez cet homme</li>
+            <li><input type="checkbox"> Mettre le site de Brad Bitt sur tous les appareils d’un Apple Store</li>
+        </ul>
+
+        <button onclick="lancerRoulette()">🎰 Lancer les roulettes</button>
+        <div id="roulette-resultat" class="hidden">
+            <p><strong>Prénom :</strong> <span id="roulette-prenom"></span></p>
+            <p><strong>Gage :</strong> <span id="roulette-gage"></span></p>
+        </div>
+
+        <button id="valider-gages" class="hidden" onclick="validerTousLesGages()">✅ Tous les gages sont faits</button>
+    </div>
+</div>
